--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: python-container
-        image: <ECR_REPO_URI>:latest
+        image: 881892164822.dkr.ecr.ap-south-1.amazonaws.com/python-microservice:latest
         ports:
         - containerPort: 3000
