--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,11 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v2
 
     - name: Build, Tag, and Push Docker image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPO_NAME: ${{ env.ECR_REPO_NAME }}
       run: |
-        IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO_NAME }}:latest
+        IMAGE_URI=$ECR_REGISTRY/$ECR_REPO_NAME:latest
         docker build -t $IMAGE_URI ./app
         docker push $IMAGE_URI
 
@@ -39,8 +42,11 @@ jobs:
       run: |
         aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
 
-    - name: Deploy to EKS
-      run: |
+    - name: Deploy to EKS using envsubst
+      env:
         IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO_NAME }}:latest
-        sed "s|881892164822.dkr.ecr.ap-south-1.amazonaws.com/python-microservice|$IMAGE_URI|g" k8s/deployment.yaml | kubectl apply -f -
+      run: |
+        sudo apt-get update && sudo apt-get install -y gettext-base
+        envsubst < k8s/deployment.yaml | kubectl apply -f -
         kubectl apply -f k8s/service.yaml
+
